@@ -161,8 +161,11 @@ class LogPage {
 							if( substr( $title->getText(), 0, 1 ) == '#' ) {
 								$titleLink = $title->getText();
 							} else {
-								$titleLink = $skin->makeLinkObj( $title, $title->getText() );
-								$titleLink .= ' (' . $skin->makeKnownLinkObj( SpecialPage::getTitleFor( 'Contributions', $title->getDBkey() ), wfMsg( 'contribslink' ) ) . ')';
+								// TODO: Store the user identifier in the parameters
+								// to make this faster for future log entries
+								$id = User::idFromName( $title->getText() );
+								$titleLink = $skin->userLink( $id, $title->getText() )
+									. $skin->userToolLinks( $id, $title->getText(), false, Linker::TOOL_LINKS_NOBLOCK );
 							}
 							break;
 						case 'rights':
