@@ -359,6 +359,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 10765) img_auth.php will now refuse logged-out requests where
   $wgWhitelistRead is undefined, instead of (incorrectly) honouring them
 * Fixed img_auth.php file name extraction for whitelist checking
+* (bug 10655) Show standard tool links for blocked users in block log messages
+* Show standard tool links for blocked users in Special:Ipblocklist
 
 == API changes since 1.10 ==
 
